Mise en place du template et copie du CdC
<1100-1130>[rdv] Synchronisation avec Alexandre Duc
<1130-1230>[report] Mise en place du rapport

--- a/latex/_meta.tex
+++ b/latex/_meta.tex
@@ -22,7 +22,7 @@
 %
 % \title[Short title]{TB title}
 % Titre du travail de bachelo
-\title[short title]{Titre du TB}
+\title{E-voting alternatif}
 
 % \titlesuffix[suffix for short title]{suffix for TB title}
 % Suffix au titre du TB (ex: "Résumé publiable" ou "Journal de travail")
@@ -45,7 +45,7 @@
 
 % \author[initial]{name}
 % Nom et initial de l'étudiant
-\author[NÉ]{Nom de l'étudiant}
+\author[G.R.]{Gaby Roch}
 
 % \authorfem or \authormasc
 % Pour la langue française, le genre de l'étudiant·e pour les accords
@@ -76,21 +76,21 @@
 
 % \confidential
 % Indique que le TB est confidentiel
-\confidential
+%\confidential
 
 % \proposedby{person's name}{Company name}{Company address}
 % Entreprise ayant proposé le travail de bachelor
 %  - S'il n'y a pas d'entreprise commenter la ligne
-\proposedby{Prénom-nom}{Entreprise}{Adresse\\NPA Ville}
+%\proposedby{Prénom-nom}{Entreprise}{Adresse\\NPA Ville}
 
 % \teacher[initial]{name}
 % Nom et initial de l'enseignant·e
-\teacher[PN]{P. nom}
+\teacher[A.D.]{Alexandre Duc}
 
 % Gender of the teacher (for french version)
 % (You can use it with \if@teachergenderfem)
-\teacherfem
-%\teachermasc
+%\teacherfem
+\teachermasc
 
 % \schoolyear{20xx--20xx}
 % Academic year of bachelor
