--- a/latex/publishable-summary.tex
+++ b/latex/publishable-summary.tex
@@ -5,10 +5,7 @@
 \begin{document}
 
     \begin{abstract}
-        Le contenu du résumé publiable
-        \\[2em]
-
-        \lipsum[1]
+        \todo[0]{Le contenu du résumé publiable}
     \end{abstract}
 
 
