Augmente le nombre d'auteurs dans la bibliographie

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -25,9 +25,12 @@
   \end{center}\vspace{2em}}
 %\usepackage{heig}
 \usepackage[
-    style=alphabetic,
+    %style=alphabetic,
     backref=true,
-    %style=numeric,
+    maxbibnames=10,
+    maxcitenames=3,
+    mincitenames=2,
+    style=numeric,
     %style=reading,
 ]{biblatex}
 \usepackage{biblio-everywhere} % show bibliographie as footnote and en document
@@ -45,8 +48,6 @@
 
 % On charge les métas informations du TB
 \input{_meta}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
