--- a/latex/biblio.bib
+++ b/latex/biblio.bib
@@ -1,22 +1,39 @@
-%! Author = grh
-%! Date = 27.01.21
 
-
-@article{greenwade95,
-    author  = "Me",
-    title   = "My title",
-    year    = "2093",
-    journal = "TUGBoat",
-    volume  = "24",
-    number  = "3",
-    pages   = "342--351"
+@article{panja_smart_2020,
+	title = {A Smart Contract System for Decentralized Borda Count Voting},
+	volume = {67},
+	doi = {10.1109/TEM.2020.2986371},
+	pages = {1323--1339},
+	number = {4},
+	journaltitle = {{IEEE} Trans. Engineering Management},
+	author = {Panja, Somnath and Bag, Samiran and Hao, Feng and Roy, Bimal Kumar},
+	date = {2020},
+	keywords = {À lire},
+	file = {Version acceptée:/home/elerille/Zotero/storage/9LLVBTA3/Panja et al. - 2020 - A Smart Contract System for Decentralized Borda Co.pdf:application/pdf;A_Smart_Contract_System_for_Decentralized_Borda_Count_Voting.pdf:/home/elerille/Zotero/storage/P72K9XD9/A_Smart_Contract_System_for_Decentralized_Borda_Count_Voting.pdf:application/pdf},
 }
-@article{greenwade93,
-    author  = "Greenwade, George D.",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
+
+@article{emerson_original_2013,
+	title = {The original Borda count and partial voting},
+	volume = {40},
+	doi = {10.1007/s00355-011-0603-9},
+	pages = {353--358},
+	number = {2},
+	journaltitle = {Soc. Choice Welf.},
+	author = {Emerson, Peter},
+	date = {2013},
+	keywords = {À lire, Interessant personnelement},
+	file = {Emerson - 2013 - The original Borda count and partial voting.pdf:/home/elerille/Zotero/storage/HI9UJVW5/Emerson - 2013 - The original Borda count and partial voting.pdf:application/pdf},
+}
+
+@inreference{noauthor_scrutin_2021,
+	title = {Scrutin proportionnel plurinominal},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://fr.wikipedia.org/w/index.php?title=Scrutin_proportionnel_plurinominal&oldid=189267036},
+	abstract = {Le mode de scrutin proportionnel plurinominal (également appelé représentation proportionnelle à scrutin de liste, {RPSL}) est un système électoral où le nombre de sièges à pourvoir est partagé en fonction du nombre de voix recueillies. C'est le système électoral proportionnel le plus répandu parmi les États indépendants et les territoires semi-autonomes qui tiennent des élections parlementaires au scrutin direct. Il est né au {XIXe} siècle avec l'apparition des partis politiques. Il semble que l'inventeur de la représentation proportionnelle soit Victor Considerant, dans un ouvrage paru en 1846. Les premiers systèmes pour le mettre en place ont d'abord été proposés par des mathématiciens et portent souvent le nom de leurs auteurs. La Belgique fut la première à adopter le scrutin proportionnel pour ses députés en 1899 (méthode D'Hondt élaborée par Victor D'Hondt).},
+	booktitle = {Wikipédia},
+	urldate = {2022-02-27},
+	date = {2021-12-27},
+	langid = {french},
+	note = {Page Version {ID}: 189267036},
+	file = {Snapshot:/home/elerille/Zotero/storage/RS45WJQV/Scrutin_proportionnel_plurinominal.html:text/html},
 }
