--- a/latex/content/example.tex
+++ b/latex/content/example.tex
@@ -43,6 +43,7 @@ echo plm
 
     plm ! \index{qwe}
 
+    \cite{emerson_original_2013}
     %asd \cite{greenwade95,greenwade93}
     asd \cite{greenwade95}
 
