--- a/latex/report.tex
+++ b/latex/report.tex
@@ -85,6 +85,7 @@
 
     \chapter{Cahier des charges}
     \subfile{content/cahier-des-charges}
+    \subfile{content/diff-methode}
     \subfile{content/example}
 
 
