--- a/latex/report.tex
+++ b/latex/report.tex
@@ -100,6 +100,7 @@
     %\addcontentsline{toc}{chapter}{\indexname}
     \printindex
     \lstlistoflistings
+    \listofalgorithms
     \listofbclogo
 
     % Glossaire
