--- a/latex/report.tex
+++ b/latex/report.tex
@@ -36,7 +36,11 @@
 \usepackage{biblio-everywhere} % show bibliographie as footnote and en document
 \usepackage{lipsum}
 
+\usepackage{hhline}
 \usepackage{subfiles}
+\usepackage{adjustbox}
+\usepackage{caption}
+\usepackage{subcaption}
 
 %\usepackage{catchfile}
 
