Essay cas limite jugment majoritaire

--- a/latex/content/diff-methode.tex
+++ b/latex/content/diff-methode.tex
@@ -296,7 +296,6 @@
   \inputMake{_dyn/scrutin/apro-caslim-1.votes.tex}
   \inputMake{_dyn/scrutin/apro-caslim-1.apro.tex}
 
-  \inputMake{_dyn/scrutin/apro-caslim-1.jugmaj.tex}
 
   C gagne alors que 75\% de l'électorat lui préfère largement A et 75\% lui préfère B.
 
@@ -319,6 +318,15 @@
   % TODO
   \end{algorithmic}
   \end{algorithm}
+
+  \subsection{Cas limites}
+  \inputMake{_dyn/scrutin/jugmaj-caslim-1A.votes.tex}
+
+  \inputMake{_dyn/scrutin/jugmaj-caslim-1A.jugmaj.tex}
+
+  \inputMake{_dyn/scrutin/jugmaj-caslim-1B.votes.tex}
+
+  \inputMake{_dyn/scrutin/jugmaj-caslim-1B.jugmaj.tex}
   
   \section{Méthode de Coombs}
   \todo{}
