--- a/latex/content/diff-methode.tex
+++ b/latex/content/diff-methode.tex
@@ -343,6 +343,8 @@
   \todo{$50 \% + 1$ versus $ > 50\%$}
   \todo{Avantage: il y a de la réflexion entre les tours lors de scrutin 
   multi-tours. Tout le monde ne reste pas forcement sur ses positions}
+  \todo{Vote utiles: Quel utilité~?}
+  \todo{Manipulabilité du résultat (sans cassé le protocole)}
 
   
   %\begin{nota}[by me]{Ma note}\lipsum[1][1-5]\end{nota}
