--- a/latex/report.tex
+++ b/latex/report.tex
@@ -10,8 +10,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % package include
 %
-\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{listofitems}
 \usepackage{minitoc}
@@ -90,7 +90,7 @@
     \chapter{Cahier des charges}
     \subfile{content/cahier-des-charges}
     \subfile{content/diff-methode}
-    \subfile{content/example}
+    %\subfile{content/example}
 
 
     \appendix
